conformance/tests/httproute-external-auth-http-response-headers.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-auth-http-response-headers
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: Exact
        value: /http/allowed
    filters:
    - type: ExternalAuth
      externalAuth:
        protocol: HTTP
        backendRef:
          name: external-auth-http
          port: 9002
        http:
          allowedResponseHeaders:
          - X-User-Id
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: Exact
        value: /http/denied
    filters:
    - type: ExternalAuth
      externalAuth:
        protocol: HTTP
        backendRef:
          name: external-auth-http
          port: 9002
        http:
          allowedHeaders: ~
    backendRefs:
    - name: infra-backend-v1
      port: 8080
